# diy-ai-speaker

./: .gitignore  README.md  ai_agent.py  diy-ai-speaker.code-workspace  init_speaker.sh  pyproject.toml  qw_agent.py  speaker_svc.py  start_agent.sh  start_vllm.sh
src/diy_ai_agent/: __main__.py  qw_agent.py
src/diy_ai_llm/: __main__.py
src/diy_ai_speaker/: __main__.py  speaker_svc.py
